--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "lucide-react": "^0.429.0",
-    "next": "14.2.5",
+    "next": "^14.2.14",
+    "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
