--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.429.0",
     "next": "^14.2.14",
     "next-auth": "^5.0.0-beta.22",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
